--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<title> FinLogic - Your Bridge to Financial Solutions </title>
+	<link rel="icon" href="images/logo.png" type="image/x-icon">
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Fontawesome CSS -->
