--- a/services.html
+++ b/services.html
@@ -135,9 +135,9 @@
 								<img class="img-fluid" src="images/services-img-01.jpg" alt="" />
 							</div>
 							<div class="card-body">
-								<h4 class="card-header"> Analytics </h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
-									esse necessitatibus neque.</p>
+								<h4 class="card-header"> Banking & FX </h4>
+								<p class="card-text">With many years of industry expertise, our leadership team has established an extensive global
+									network comprising Tier 1 Banks, Asset Managers, Foreign Exchange Brokers, and Electronic Money Institutions.</p>
 							</div>
 						</div>
 					</div>
@@ -147,9 +147,9 @@
 								<img class="img-fluid" src="images/services-img-02.jpg" alt="" />
 							</div>
 							<div class="card-body">
-								<h4 class="card-header"> Applications </h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
-									esse necessitatibus neque.</p>
+								<h4 class="card-header"> Cross Border Payments </h4>
+								<p class="card-text">Cross-border payment services are vital in facilitating global commerce and financial transactions
+									and are fundamental to FinLogic's offerings.</p>
 							</div>
 						</div>
 					</div>
@@ -159,9 +159,9 @@
 								<img class="img-fluid" src="images/services-img-03.jpg" alt="" />
 							</div>
 							<div class="card-body">
-								<h4 class="card-header"> Business Process </h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
-									esse necessitatibus neque.</p>
+								<h4 class="card-header"> Card Issuance Programmes </h4>
+								<p class="card-text">Through our partnerships, FinLogic delivers a complete payment solution, encompassing payment card
+									issuance and IBAN wallet accounts.</p>
 							</div>
 						</div>
 					</div>
@@ -171,9 +171,9 @@
 								<img class="img-fluid" src="images/services-img-04.jpg" alt="" />
 							</div>
 							<div class="card-body">
-								<h4 class="card-header"> Consulting </h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
-									esse necessitatibus neque.</p>
+								<h4 class="card-header"> Card Processing </h4>
+								<p class="card-text">FinLogic provides an extensive worldwide network of payment gateways and collaborating acquiring
+									banks, providing personalized payment processing solutions across various regions.</p>
 							</div>
 						</div>
 					</div>
@@ -183,9 +183,9 @@
 								<img class="img-fluid" src="images/services-img-05.jpg" alt="" />
 							</div>
 							<div class="card-body">
-								<h4 class="card-header"> Infrastructure </h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
-									esse necessitatibus neque.</p>
+								<h4 class="card-header"> Crypto Processing </h4>
+								<p class="card-text">In response to the growing demand for cryptocurrency processing solutions, we are excited to
+									announce our expansion into this dynamic realm.</p>
 							</div>
 						</div>
 					</div>
@@ -195,9 +195,21 @@
 								<img class="img-fluid" src="images/services-img-06.jpg" alt="" />
 							</div>
 							<div class="card-body">
-								<h4 class="card-header"> Product Engineering </h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
-									esse necessitatibus neque.</p>
+								<h4 class="card-header"> Private Banking </h4>
+								<p class="card-text">In an ever more intricate financial environment, wealthy individuals encounter hurdles when
+									navigating global financial services.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 mb-4">
+						<div class="card h-100">
+							<div class="card-img">
+								<img class="img-fluid" src="images/services-img-05.jpg" alt="" />
+							</div>
+							<div class="card-body">
+								<h4 class="card-header"> wealth structuring </h4>
+								<p class="card-text">FinLogic excels in aiding affluent clients with customized banking solutions via our extensive
+									international network of banking and asset management connections.</p>
 							</div>
 						</div>
 					</div>
