--- a/index.html
+++ b/index.html
@@ -71,22 +71,32 @@
 							<a class="nav-link" href="services.html">Services</a>
 						</li>
 						<li class="nav-item dropdown">
+							<a class="nav-link" href="#" id="navbarDropdownBusiness" data-toggle="dropdown"
+								aria-haspopup="true" aria-expanded="false">Business Services <i
+									class="fas fa-sort-down"></i></a>
+							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+								<a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
+								<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
+								<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+							</div>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link" href="#" id="navbarDropdownIndividual" data-toggle="dropdown"
+								aria-haspopup="true" aria-expanded="false">Individual Services
+								<i
+									class="fas fa-sort-down"></i></a>
+							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+								<a class="dropdown-item" href="portfolio-3-col.html">Private Banking</a>
+								<a class="dropdown-item" href="portfolio-4-col.html">Wealth Structuring</a>
+							</div>
+						</li>
+						<li class="nav-item dropdown">
 							<a class="nav-link" href="#" id="navbarDropdownBlog" data-toggle="dropdown"
 								aria-haspopup="true" aria-expanded="false">Pages <i class="fas fa-sort-down"></i></a>
 							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
 								<a class="dropdown-item" href="faq.html">FAQ</a>
 								<a class="dropdown-item" href="404.html">404</a>
 								<a class="dropdown-item" href="pricing.html">Pricing Table</a>
-							</div>
-						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
-								aria-haspopup="true" aria-expanded="false">Portfolio <i
-									class="fas fa-sort-down"></i></a>
-							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-								<a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
-								<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-								<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
 							</div>
 						</li>
 						<li class="nav-item dropdown">
@@ -153,16 +163,22 @@
 				<div class="row">
 					<div class="col-lg-6">
 						<h2>Welcome to FinLogic</h2>
-						<p>FinLogic specializes in delivering an extensive consultancy service covering Foreign Exchange, Banking, Payments, and
+						<p>FinLogic specializes in delivering an extensive consultancy service covering Foreign
+							Exchange, Banking, Payments, and
 							Processing.</p>
-						<p>Our unique methodology entails aligning our clients with reputable Tier 1 Banks, Asset Managers, Foreign Exchange
-							Brokers, Electronic Money Institutions, Card ProgrammeManagers, and Payment Gateways through strategic
+						<p>Our unique methodology entails aligning our clients with reputable Tier 1 Banks, Asset
+							Managers, Foreign Exchange
+							Brokers, Electronic Money Institutions, Card ProgrammeManagers, and Payment Gateways through
+							strategic
 							partnerships..</p>
 						<h5>Our smart approach</h5>
 						<ul>
-							<li>Tailored Solutions: We craft strategies that align with your unique business needs. </li>
-							<li>Seamless Integration: We connect you with top-tier financial institutions and payment ecosystems.</li>
-							<li>Expert Guidance: We simplify complexities in banking, payments, and foreign exchange.</li>
+							<li>Tailored Solutions: We craft strategies that align with your unique business needs.
+							</li>
+							<li>Seamless Integration: We connect you with top-tier financial institutions and payment
+								ecosystems.</li>
+							<li>Expert Guidance: We simplify complexities in banking, payments, and foreign exchange.
+							</li>
 						</ul>
 					</div>
 					<div class="col-lg-6">
@@ -184,9 +200,9 @@
 								<img class="img-fluid" src="images/services-img-01.jpg" alt="" />
 							</div>
 							<div class="card-body">
-								<h4 class="card-header"> Analytics </h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
-									esse necessitatibus neque.</p>
+								<h4 class="card-header"> Banking & FX </h4>
+								<p class="card-text">With many years of industry expertise, our leadership team has established an extensive global
+									network comprising Tier 1 Banks, Asset Managers, Foreign Exchange Brokers, and Electronic Money Institutions</p>
 							</div>
 						</div>
 					</div>
@@ -196,9 +212,9 @@
 								<img class="img-fluid" src="images/services-img-02.jpg" alt="" />
 							</div>
 							<div class="card-body">
-								<h4 class="card-header"> Applications </h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
-									esse necessitatibus neque.</p>
+								<h4 class="card-header"> Cross Border Payments </h4>
+								<p class="card-text">Cross-border payment services are vital in facilitating global commerce and financial transactions
+									and are fundamental to FinLogic's offerings.</p>
 							</div>
 						</div>
 					</div>
@@ -208,9 +224,9 @@
 								<img class="img-fluid" src="images/services-img-03.jpg" alt="" />
 							</div>
 							<div class="card-body">
-								<h4 class="card-header"> Business Process </h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
-									esse necessitatibus neque.</p>
+								<h4 class="card-header"> Card Issuance Programmes </h4>
+								<p class="card-text">Through our partnerships, FinLogic delivers a complete payment solution, encompassing payment card
+									issuance and IBAN wallet accounts.</p>
 							</div>
 						</div>
 					</div>
@@ -220,9 +236,9 @@
 								<img class="img-fluid" src="images/services-img-04.jpg" alt="" />
 							</div>
 							<div class="card-body">
-								<h4 class="card-header"> Consulting </h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
-									esse necessitatibus neque.</p>
+								<h4 class="card-header"> Card Processing </h4>
+								<p class="card-text">FinLogic provides an extensive worldwide network of payment gateways and collaborating acquiring
+									banks, providing personalized payment processing solutions across various regions.</p>
 							</div>
 						</div>
 					</div>
@@ -232,9 +248,9 @@
 								<img class="img-fluid" src="images/services-img-05.jpg" alt="" />
 							</div>
 							<div class="card-body">
-								<h4 class="card-header"> Infrastructure </h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
-									esse necessitatibus neque.</p>
+								<h4 class="card-header"> Crypto Processing </h4>
+								<p class="card-text">In response to the growing demand for cryptocurrency processing solutions, we are excited to
+									announce our expansion into this dynamic realm.</p>
 							</div>
 						</div>
 					</div>
@@ -244,9 +260,21 @@
 								<img class="img-fluid" src="images/services-img-06.jpg" alt="" />
 							</div>
 							<div class="card-body">
-								<h4 class="card-header"> Product Engineering </h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
-									esse necessitatibus neque.</p>
+								<h4 class="card-header"> Private Banking </h4>
+								<p class="card-text">In an ever more intricate financial environment, wealthy individuals encounter hurdles when
+									navigating global financial services.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 mb-4">
+						<div class="card h-100">
+							<div class="card-img">
+								<img class="img-fluid" src="images/services-img-05.jpg" alt="" />
+							</div>
+							<div class="card-body">
+								<h4 class="card-header"> wealth structuring </h4>
+								<p class="card-text">FinLogic excels in aiding affluent clients with customized banking solutions via our extensive
+									international network of banking and asset management connections.</p>
 							</div>
 						</div>
 					</div>
