--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,27 @@
 							<a class="nav-link" href="services.html">Services</a>
 						</li>
 						<li class="nav-item dropdown">
+							<a class="nav-link" href="#" id="navbarDropdownBusiness" data-toggle="dropdown"
+								aria-haspopup="true" aria-expanded="false">Business Services <i
+									class="fas fa-sort-down"></i></a>
+							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+								<a class="dropdown-item" href="Banking&fx.html">Banking & FX</a>
+								<a class="dropdown-item" href="Crossborderpayments.html">Cross Border Payments</a>
+								<a class="dropdown-item" href="Cardissuanceprogrammes.html">Card Issuance Programmes</a>
+								<a class="dropdown-item" href="Cardprocessing.html">Card Processing</a>
+								<a class="dropdown-item" href="Cryptoprocessing.html">Crypto Processing</a>
+							</div>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link" href="#" id="navbarDropdownIndividual" data-toggle="dropdown"
+								aria-haspopup="true" aria-expanded="false">Individual Services
+								<i class="fas fa-sort-down"></i></a>
+							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+								<a class="dropdown-item" href="Privatebanking.html">Private Banking</a>
+								<a class="dropdown-item" href="Wealthstructuring.html">Wealth Structuring</a>
+							</div>
+						</li>
+						<li class="nav-item dropdown">
 							<a class="nav-link" href="#" id="navbarDropdownBlog" data-toggle="dropdown"
 								aria-haspopup="true" aria-expanded="false">Pages <i class="fas fa-sort-down"></i></a>
 							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
@@ -75,16 +96,7 @@
 								<a class="dropdown-item" href="pricing.html">Pricing Table</a>
 							</div>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
-								aria-haspopup="true" aria-expanded="false">Portfolio <i
-									class="fas fa-sort-down"></i></a>
-							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-								<a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
-								<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-								<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
-							</div>
-						</li>
+
 						<li class="nav-item dropdown">
 							<a class="nav-link" href="#" id="navbarDropdownBlog" data-toggle="dropdown"
 								aria-haspopup="true" aria-expanded="false">Blog <i class="fas fa-sort-down"></i></a>
