--- a/services.html
+++ b/services.html
@@ -69,6 +69,27 @@
 							<a class="nav-link active" href="services.html">Services</a>
 						</li>
 						<li class="nav-item dropdown">
+							<a class="nav-link" href="#" id="navbarDropdownBusiness" data-toggle="dropdown"
+								aria-haspopup="true" aria-expanded="false">Business Services <i
+									class="fas fa-sort-down"></i></a>
+							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+								<a class="dropdown-item" href="Banking&fx.html">Banking & FX</a>
+								<a class="dropdown-item" href="Crossborderpayments.html">Cross Border Payments</a>
+								<a class="dropdown-item" href="Cardissuanceprogrammes.html">Card Issuance Programmes</a>
+								<a class="dropdown-item" href="Cardprocessing.html">Card Processing</a>
+								<a class="dropdown-item" href="Cryptoprocessing.html">Crypto Processing</a>
+							</div>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link" href="#" id="navbarDropdownIndividual" data-toggle="dropdown"
+								aria-haspopup="true" aria-expanded="false">Individual Services
+								<i class="fas fa-sort-down"></i></a>
+							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+								<a class="dropdown-item" href="Privatebanking.html">Private Banking</a>
+								<a class="dropdown-item" href="Wealthstructuring.html">Wealth Structuring</a>
+							</div>
+						</li>
+						<li class="nav-item dropdown">
 							<a class="nav-link" href="#" id="navbarDropdownBlog" data-toggle="dropdown"
 								aria-haspopup="true" aria-expanded="false">Pages <i class="fas fa-sort-down"></i></a>
 							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
@@ -77,16 +98,7 @@
 								<a class="dropdown-item" href="pricing.html">Pricing Table</a>
 							</div>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
-								aria-haspopup="true" aria-expanded="false">Portfolio <i
-									class="fas fa-sort-down"></i></a>
-							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-								<a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
-								<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-								<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
-							</div>
-						</li>
+
 						<li class="nav-item dropdown">
 							<a class="nav-link" href="#" id="navbarDropdownBlog" data-toggle="dropdown"
 								aria-haspopup="true" aria-expanded="false">Blog <i class="fas fa-sort-down"></i></a>
@@ -136,8 +148,10 @@
 							</div>
 							<div class="card-body">
 								<h4 class="card-header"> Banking & FX </h4>
-								<p class="card-text">With many years of industry expertise, our leadership team has established an extensive global
-									network comprising Tier 1 Banks, Asset Managers, Foreign Exchange Brokers, and Electronic Money Institutions.</p>
+								<p class="card-text">With many years of industry expertise, our leadership team has
+									established an extensive global
+									network comprising Tier 1 Banks, Asset Managers, Foreign Exchange Brokers, and
+									Electronic Money Institutions.</p>
 							</div>
 						</div>
 					</div>
@@ -148,7 +162,8 @@
 							</div>
 							<div class="card-body">
 								<h4 class="card-header"> Cross Border Payments </h4>
-								<p class="card-text">Cross-border payment services are vital in facilitating global commerce and financial transactions
+								<p class="card-text">Cross-border payment services are vital in facilitating global
+									commerce and financial transactions
 									and are fundamental to FinLogic's offerings.</p>
 							</div>
 						</div>
@@ -160,7 +175,8 @@
 							</div>
 							<div class="card-body">
 								<h4 class="card-header"> Card Issuance Programmes </h4>
-								<p class="card-text">Through our partnerships, FinLogic delivers a complete payment solution, encompassing payment card
+								<p class="card-text">Through our partnerships, FinLogic delivers a complete payment
+									solution, encompassing payment card
 									issuance and IBAN wallet accounts.</p>
 							</div>
 						</div>
@@ -172,8 +188,10 @@
 							</div>
 							<div class="card-body">
 								<h4 class="card-header"> Card Processing </h4>
-								<p class="card-text">FinLogic provides an extensive worldwide network of payment gateways and collaborating acquiring
-									banks, providing personalized payment processing solutions across various regions.</p>
+								<p class="card-text">FinLogic provides an extensive worldwide network of payment
+									gateways and collaborating acquiring
+									banks, providing personalized payment processing solutions across various regions.
+								</p>
 							</div>
 						</div>
 					</div>
@@ -184,7 +202,8 @@
 							</div>
 							<div class="card-body">
 								<h4 class="card-header"> Crypto Processing </h4>
-								<p class="card-text">In response to the growing demand for cryptocurrency processing solutions, we are excited to
+								<p class="card-text">In response to the growing demand for cryptocurrency processing
+									solutions, we are excited to
 									announce our expansion into this dynamic realm.</p>
 							</div>
 						</div>
@@ -196,7 +215,8 @@
 							</div>
 							<div class="card-body">
 								<h4 class="card-header"> Private Banking </h4>
-								<p class="card-text">In an ever more intricate financial environment, wealthy individuals encounter hurdles when
+								<p class="card-text">In an ever more intricate financial environment, wealthy
+									individuals encounter hurdles when
 									navigating global financial services.</p>
 							</div>
 						</div>
@@ -208,7 +228,8 @@
 							</div>
 							<div class="card-body">
 								<h4 class="card-header"> wealth structuring </h4>
-								<p class="card-text">FinLogic excels in aiding affluent clients with customized banking solutions via our extensive
+								<p class="card-text">FinLogic excels in aiding affluent clients with customized banking
+									solutions via our extensive
 									international network of banking and asset management connections.</p>
 							</div>
 						</div>
