--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
 					<div class="project-menu text-center">
 						<button class="btn btn-primary active" data-filter="*">All</button>
 						<button data-filter=".business" class="btn btn-primary">Business</button>
-						<button data-filter=".travel" class="btn btn-primary">Travel</button>
+						<button data-filter=".crpto" class="btn btn-primary">Crpto</button>
 						<button data-filter=".financial" class="btn btn-primary">Financial</button>
-						<button data-filter=".academic" class="btn btn-primary">Academic</button>
+						<button data-filter=".card" class="btn btn-primary">Card</button>
 					</div>
 				</div>
 				<div id="projects" class="projects-main row">
@@ -322,7 +322,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-sm-6 pro-item portfolio-item business academic">
+					<div class="col-lg-4 col-sm-6 pro-item portfolio-item business card">
 						<div class="card h-100">
 							<div class="card-img">
 								<a href="images/portfolio-img-02.jpg" data-fancybox="images">
@@ -337,7 +337,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-sm-6 pro-item portfolio-item travel">
+					<div class="col-lg-4 col-sm-6 pro-item portfolio-item crpto">
 						<div class="card h-100">
 							<div class="card-img">
 								<a href="images/portfolio-img-03.jpg" data-fancybox="images">
@@ -367,7 +367,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-sm-6 pro-item portfolio-item travel">
+					<div class="col-lg-4 col-sm-6 pro-item portfolio-item crpto">
 						<div class="card h-100">
 							<div class="card-img">
 								<a href="images/portfolio-img-05.jpg" data-fancybox="images">
@@ -382,7 +382,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-sm-6 pro-item portfolio-item financial academic">
+					<div class="col-lg-4 col-sm-6 pro-item portfolio-item financial card">
 						<div class="card h-100">
 							<div class="card-img">
 								<a href="images/portfolio-img-01.jpg" data-fancybox="images">
