--- a/index.html
+++ b/index.html
@@ -574,15 +574,17 @@
 						<ul class="footer_ul2_amrc">
 							<li>
 								<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-								<p>Lorem Ipsum is simply dummy...<a href="#">https://www.lipsum.com/</a></p>
+								<p>Simplify Your Financial Journey<a href="#">https://www.finlogic.hk/</a></p>
 							</li>
 							<li>
 								<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-								<p>Lorem Ipsum is simply dummy...<a href="#">https://www.lipsum.com/</a></p>
+								<p>Smart Financial Solutions, Tailored for You<a href="#">https://www.finlogic.hk/</a>
+								</p>
 							</li>
 							<li>
 								<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-								<p>Lorem Ipsum is simply dummy...<a href="#">https://www.lipsum.com/</a></p>
+								<p>Empowering Your Business with Strategic Partnerships<a
+										href="#">https://www.finlogic.hk/</a></p>
 							</li>
 						</ul>
 						<!--footer_ul2_amrc ends here-->
@@ -590,8 +592,9 @@
 					<div class="col-lg-3 col-md-6 col-sm-6 ">
 						<div class="news-box">
 							<h5 class="headin5_amrc col_white_amrc pt2">Newsletter</h5>
-							<p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-								velit...</p>
+							<p>Sign up for our newsletter and receive expert insights, industry trends, and exclusive
+								updates directly in your inbox. Stay ahead in Foreign Exchange, Banking, Payments, and
+								beyond.</p>
 							<form action="#">
 								<div class="input-group">
 									<input class="form-control" placeholder="Search for..." type="text">
@@ -605,8 +608,8 @@
 				</div>
 			</div>
 			<div class="container">
-				<p class="copyright text-center">All Rights Reserved. &copy; 2018 <a href="#">FinLogic</a> Design By :
-					<a href="https://html.design/">html design</a>
+				<p class="copyright text-center">All Rights Reserved. &copy; 2025 <a href="#">FinLogic</a> Design By :
+					<a href="https://dennisnzioki.com/">DNX EMPIRE</a>
 				</p>
 			</div>
 		</footer>
