--- a/blog.html
+++ b/blog.html
@@ -139,7 +139,7 @@
 							<img class="card-img-top" src="images/blog-img-01.jpg" alt="Card image Blog" />
 							<div class="card-body">
 								<div class="by-post">
-									Posted on January 1, 2018 by <a href="#">FinLogic</a>
+									Posted on January 1, 2025 by <a href="#">FinLogic</a>
 								</div>
 								<h2 class="card-title">How to run successful business meeting</h2>
 								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -153,7 +153,7 @@
 							<img class="card-img-top" src="images/blog-img-02.jpg" alt="Card image Blog">
 							<div class="card-body">
 								<div class="by-post">
-									Posted on January 1, 2018 by <a href="#">FinLogic</a>
+									Posted on January 1, 2025 by <a href="#">FinLogic</a>
 								</div>
 								<h2 class="card-title">How to run successful business meeting</h2>
 								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -167,7 +167,7 @@
 							<img class="card-img-top" src="images/blog-img-03.jpg" alt="Card image Blog">
 							<div class="card-body">
 								<div class="by-post">
-									Posted on January 1, 2018 by <a href="#">FinLogic</a>
+									Posted on January 1, 2025 by <a href="#">FinLogic</a>
 								</div>
 								<h2 class="card-title">How to run successful business meeting</h2>
 								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -273,8 +273,11 @@
 					<div class="col-lg-3 col-md-6 col-sm-6 col">
 						<h5 class="headin5_amrc col_white_amrc pt2">About Us</h5>
 						<!--headin5_amrc-->
-						<p class="mb10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-							Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+						<p class="mb10">FinLogic specializes in delivering an extensive consultancy service covering
+							Foreign Exchange, Banking, Payments, and Processing.Our unique methodology entails aligning
+							our clients with reputable Tier 1 Banks, Asset Managers, Foreign Exchange Brokers,
+							Electronic Money Institutions, Card ProgrammeManagers, and Payment Gateways through
+							strategic partnerships.</p>
 						<ul class="footer-social">
 							<li><a class="facebook hb-xs-margin" href="#"><span class="hb hb-xs spin hb-facebook"><i
 											class="fab fa-facebook-f"></i></span></a></li>
@@ -308,15 +311,17 @@
 						<ul class="footer_ul2_amrc">
 							<li>
 								<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-								<p>Lorem Ipsum is simply dummy...<a href="#">https://www.lipsum.com/</a></p>
+								<p>Simplify Your Financial Journey<a href="#">https://www.finlogic.hk/</a></p>
 							</li>
 							<li>
 								<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-								<p>Lorem Ipsum is simply dummy...<a href="#">https://www.lipsum.com/</a></p>
+								<p>Smart Financial Solutions, Tailored for You<a href="#">https://www.finlogic.hk/</a>
+								</p>
 							</li>
 							<li>
 								<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-								<p>Lorem Ipsum is simply dummy...<a href="#">https://www.lipsum.com/</a></p>
+								<p>Empowering Your Business with Strategic Partnerships<a
+										href="#">https://www.finlogic.hk/</a></p>
 							</li>
 						</ul>
 						<!--footer_ul2_amrc ends here-->
@@ -324,8 +329,9 @@
 					<div class="col-lg-3 col-md-6 col-sm-6 ">
 						<div class="news-box">
 							<h5 class="headin5_amrc col_white_amrc pt2">Newsletter</h5>
-							<p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-								velit...</p>
+							<p>Sign up for our newsletter and receive expert insights, industry trends, and exclusive
+								updates directly in your inbox. Stay ahead in Foreign Exchange, Banking, Payments, and
+								beyond.</p>
 							<form action="#">
 								<div class="input-group">
 									<input class="form-control" placeholder="Search for..." type="text">
@@ -339,8 +345,8 @@
 				</div>
 			</div>
 			<div class="container">
-				<p class="copyright text-center">All Rights Reserved. &copy; 2018 <a href="#">FinLogic</a> Design By :
-					<a href="https://html.design/">html design</a>
+				<p class="copyright text-center">All Rights Reserved. &copy; 2025 <a href="#">FinLogic</a> Design By :
+					<a href="https://dennisnzioki.com/">DNX EMPIRE</a>
 				</p>
 			</div>
 		</footer>
