--- a/about.html
+++ b/about.html
@@ -139,16 +139,18 @@
 						<img class="img-fluid rounded mb-4" src="images/about-img.jpg" alt="" />
 					</div>
 					<div class="col-lg-6">
-						<h2>About Modern Business</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur
-							similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem
-							perferendis dicta dolorem non blanditiis ex fugiat.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum
-							voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit,
-							temporibus reprehenderit dolorum!</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia
-							corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere
-							corrupti necessitatibus perspiciatis quis?</p>
+						<h2>About FinLogic</h2>
+						<p>At FinLogic, we specialize in providing top-tier consultancy services in Foreign Exchange,
+							Banking, Payments, and Processing. Our mission is to empower businesses by connecting them
+							with industry leaders, including Tier 1 Banks, Asset Managers, FX Brokers, and Payment
+							Gateways.</p>
+						<p>With a strategic and innovative approach, we tailor solutions to meet your unique needs,
+							ensuring seamless integration and long-term success. Whether you're navigating the
+							complexities of foreign exchange or optimizing payment processes, FinLogic is your trusted
+							partner in driving financial excellence.</p>
+						<p>With a focus on innovation and efficiency, we simplify complex financial processes, enabling
+							your business to thrive. At FinLogic, we are committed to delivering tailored solutions that
+							drive growth, streamline operations, and create lasting value.</p>
 					</div>
 				</div>
 				<!-- /.row -->
@@ -160,18 +162,16 @@
 					<div class="col-lg-6">
 						<div class="left-ab">
 							<h3>Our Mission</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum
-								consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus
-								reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat. Lorem ipsum
-								dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum
-								voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet.
-								Odit, temporibus reprehenderit dolorum!</p>
+							<p>To empower businesses with innovative financial solutions by delivering expert
+								consultancy and fostering strategic partnerships with leading institutions. We aim to
+								simplify complexities in Foreign Exchange, Banking, Payments, and Processing, enabling
+								sustainable growth and success for our clients.</p>
 							<ul>
-								<li>Sed at tellus eu quam posuere mattis.</li>
-								<li>Phasellus quis erat et enim laoreet posuere ac porttitor ipsum.</li>
-								<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-								<li>Sed at tellus eu quam posuere mattis.</li>
-								<li>Phasellus quis erat et enim laoreet posuere ac porttitor ipsum.</li>
+								<li>Provide Comprehensive Consultancy.</li>
+								<li>Build Lasting Partnerships.</li>
+								<li>Enhance Business Efficiency.</li>
+								<li>Enable Financial Success.</li>
+								<li>Drive Industry Leadership.</li>
 							</ul>
 						</div>
 					</div>
@@ -190,18 +190,17 @@
 					<div class="col-lg-6">
 						<div class="left-ab">
 							<h3>Our Vision</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum
-								consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus
-								reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat. Lorem ipsum
-								dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum
-								voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet.
-								Odit, temporibus reprehenderit dolorum!</p>
+							<p>To be the leading consultancy firm, empowering businesses globally by providing
+								innovative, strategic, and impactful financial solutions that drive growth, enhance
+								efficiency, and shape the future of financial industries. We aim to connect businesses
+								with the world’s top financial institutions, ensuring sustainable success and a
+								competitive edge.</p>
 							<ul>
-								<li>Sed at tellus eu quam posuere mattis.</li>
-								<li>Phasellus quis erat et enim laoreet posuere ac porttitor ipsum.</li>
-								<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-								<li>Sed at tellus eu quam posuere mattis.</li>
-								<li>Phasellus quis erat et enim laoreet posuere ac porttitor ipsum.</li>
+								<li>Global Leadership.</li>
+								<li>Empower Businesses.</li>
+								<li>Innovative Solutions.</li>
+								<li>Strengthen Partnerships.</li>
+								<li>Financial Excellence.</li>
 							</ul>
 						</div>
 					</div>
@@ -307,8 +306,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero
-							rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
+						<p>Learn why strategic alliances with asset managers, brokers, and electronic money institutions
+							are crucial for staying competitive. FinLogic’s expertise ensures your business benefits
+							from the best opportunities.</p>
 					</div>
 					<div class="col-md-4">
 						<a class="btn btn-lg btn-secondary btn-block" href="#"> Contact Us </a>
