--- a/services.html
+++ b/services.html
@@ -277,8 +277,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero
-							rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
+						<p>Learn why strategic alliances with asset managers, brokers, and electronic money institutions
+							are crucial for staying competitive. FinLogic’s expertise ensures your business benefits
+							from the best opportunities.</p>
 					</div>
 					<div class="col-md-4">
 						<a class="btn btn-lg btn-secondary btn-block" href="#"> Contact Us </a>
