--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
 						<div class="contact-details">
 							<ul>
 								<li><i class="fas fa-phone fa-rotate-90"></i> +01 899 286 777</li>
-								<li><i class="fas fa-map-marker-alt"></i> 8/99 , North khailkoir, NY</li>
+								<li><i class="fas fa-map-marker-alt"></i> San Po Kong, Kowloon, HONG KONG, SAR</li>
 							</ul>
 						</div>
 					</div>
@@ -136,8 +136,9 @@
 					<img class="img-fluid" src="images/404.png" alt="" />
 				</div>
 				<h3>Oops! That page can’t be found.</h3>
-				<p>We can’t find the page your are looking for. You can check out our <a href="#">Homepage</a>.</p>
-				<a class="btn btn-primary" href="#"> Back To Homepage </a>
+				<p>We can’t find the page your are looking for. You can check out our <a href="index.html">Homepage</a>.
+				</p>
+				<a class="btn btn-primary" href="index.html"> Back To Homepage </a>
 			</div>
 			<!-- /.jumbotron -->
 		</div>
@@ -165,8 +166,7 @@
 							<li><a class="googleplus hb-xs-margin" href="#"><span
 										class="hb hb-xs spin hb-google-plus"><i
 											class="fab fa-google-plus-g"></i></span></a></li>
-							<li><a class="dribbble hb-xs-margin" href="#"><span class="hb hb-xs spin hb-dribbble"><i
-											class="fab fa-dribbble"></i></span></a></li>
+
 						</ul>
 					</div>
 					<div class="col-lg-3 col-md-6 col-sm-6">
