--- a/faq.html
+++ b/faq.html
@@ -37,7 +37,7 @@
 						<div class="contact-details">
 							<ul>
 								<li><i class="fas fa-phone fa-rotate-90"></i> +01 899 286 777</li>
-								<li><i class="fas fa-map-marker-alt"></i> 8/99 , North khailkoir, NY</li>
+								<li><i class="fas fa-map-marker-alt"></i> San Po Kong, Kowloon, HONG KONG, SAR</li>
 							</ul>
 						</div>
 					</div>
@@ -139,79 +139,15 @@
 							<h5 class="mb-0">
 								<button class="btn btn-link" type="button" data-toggle="collapse"
 									data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-									Can a home depreciate in value?
+									What are Business services?
 								</button>
 							</h5>
 						</div>
 						<div id="collapseOne" class="collapse show" data-parent="#accordionExample">
 							<div class="card-body">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-								incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-								exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-								dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-								Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-								mollit anim id est laborum.
-							</div>
-						</div>
-					</div>
-					<div class="card accordion-single">
-						<div class="card-header" id="2">
-							<h5 class="mb-0">
-								<button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-									data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-									Is an older home as good a value as a new home?
-								</button>
-							</h5>
-						</div>
-						<div id="collapseTwo" class="collapse" data-parent="#accordionExample">
-							<div class="card-body">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-								incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-								exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-								dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-								Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-								mollit anim id est laborum.
-							</div>
-						</div>
-					</div>
-					<div class="card accordion-single">
-						<div class="card-header" id="3">
-							<h5 class="mb-0">
-								<button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-									data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-									What is a broker?
-								</button>
-							</h5>
-						</div>
-						<div id="collapseThree" class="collapse" data-parent="#accordionExample">
-							<div class="card-body">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-								incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-								exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-								dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-								Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-								mollit anim id est laborum.
-							</div>
-						</div>
-					</div>
-					<div class="card accordion-single">
-						<div class="card-header">
-							<h5 class="mb-0">
-								<button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-									data-target="#c4" aria-expanded="false" aria-controls="collapseThree">
-									What is the difference between being prequalified and preapproved for a
-									loan?
-								</button>
-							</h5>
-						</div>
-						<div id="c4" class="collapse" data-parent="#accordionExample">
-							<div class="card-body">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-								incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-								exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-								dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-								Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-								mollit anim id est laborum.
+								Business services refer to a range of specialized services offered to businesses,
+								including banking and foreign exchange, cross-border payment solutions, card processing,
+								and card issuance programs.
 							</div>
 						</div>
 					</div>
@@ -220,18 +156,15 @@
 							<h5 class="mb-0">
 								<button class="btn btn-link collapsed" type="button" data-toggle="collapse"
 									data-target="#c5" aria-expanded="false" aria-controls="collapseThree">
-									What is title insurance?
+									What services does FinLogic offer?
 								</button>
 							</h5>
 						</div>
 						<div id="c5" class="collapse" data-parent="#accordionExample">
 							<div class="card-body">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-								incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-								exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-								dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-								Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-								mollit anim id est laborum.
+								FinLogic provides expert consultancy in Foreign Exchange, Banking, Payments, and
+								Processing. We help businesses navigate these complex areas and connect them with Tier 1
+								Banks, Asset Managers, Payment Gateways, and more.
 							</div>
 						</div>
 					</div>
@@ -240,18 +173,15 @@
 							<h5 class="mb-0">
 								<button class="btn btn-link collapsed" type="button" data-toggle="collapse"
 									data-target="#c6" aria-expanded="false" aria-controls="collapseThree">
-									Can I pay my own taxes and insurance?
+									How can FinLogic help my business grow?
 								</button>
 							</h5>
 						</div>
 						<div id="c6" class="collapse" data-parent="#accordionExample">
 							<div class="card-body">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-								incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-								exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-								dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-								Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-								mollit anim id est laborum.
+								We deliver tailored financial strategies that streamline your operations, enhance
+								efficiency, and open doors to strategic partnerships with leading financial
+								institutions, enabling your business to thrive in a competitive market.
 							</div>
 						</div>
 					</div>
@@ -260,18 +190,15 @@
 							<h5 class="mb-0">
 								<button class="btn btn-link collapsed" type="button" data-toggle="collapse"
 									data-target="#c7" aria-expanded="false" aria-controls="collapseThree">
-									How can I avoid private mortgage insurance?
+									Who can benefit from FinLogic’s services?
 								</button>
 							</h5>
 						</div>
 						<div id="c7" class="collapse" data-parent="#accordionExample">
 							<div class="card-body">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-								incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-								exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-								dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-								Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-								mollit anim id est laborum.
+								Businesses of all sizes in need of consultancy and strategic advice on foreign exchange,
+								payment systems, banking services, and processing can benefit from our expertise,
+								especially those looking to optimize their financial operations.
 							</div>
 						</div>
 					</div>
@@ -280,21 +207,67 @@
 							<h5 class="mb-0">
 								<button class="btn btn-link collapsed" type="button" data-toggle="collapse"
 									data-target="#c8" aria-expanded="false" aria-controls="collapseThree">
-									How is interest calculated on a mortgage loan?
+									What makes FinLogic different from other consultancy firms?
 								</button>
 							</h5>
 						</div>
 						<div id="c8" class="collapse" data-parent="#accordionExample">
 							<div class="card-body">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-								incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-								exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-								dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-								Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-								mollit anim id est laborum.
+								FinLogic stands out through our unique approach of fostering partnerships with top-tier
+								institutions, providing personalized solutions, and leveraging innovative strategies to
+								deliver measurable financial success for our clients.
 							</div>
 						</div>
 					</div>
+					<div class="card accordion-single">
+						<div class="card-header" id="2">
+							<h5 class="mb-0">
+								<button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+									data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+									How can I apply?
+								</button>
+							</h5>
+						</div>
+						<div id="collapseTwo" class="collapse" data-parent="#accordionExample">
+							<div class="card-body">
+								To apply for our corporate services, please fill out the application form on our website
+								or contact our team for assistance.
+							</div>
+						</div>
+					</div>
+					<div class="card accordion-single">
+						<div class="card-header" id="3">
+							<h5 class="mb-0">
+								<button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+									data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+									Can I partner with you?
+								</button>
+							</h5>
+						</div>
+						<div id="collapseThree" class="collapse" data-parent="#accordionExample">
+							<div class="card-body">
+								Yes, we offer partnership opportunities for businesses looking to collaborate and
+								benefit from our corporate services. Please reach out to our team to discuss further.
+							</div>
+						</div>
+					</div>
+					<div class="card accordion-single">
+						<div class="card-header">
+							<h5 class="mb-0">
+								<button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+									data-target="#c4" aria-expanded="false" aria-controls="collapseThree">
+									What is private banking?
+								</button>
+							</h5>
+						</div>
+						<div id="c4" class="collapse" data-parent="#accordionExample">
+							<div class="card-body">
+								Private banking refers to personalized financial services offered to high-net-worth
+								individuals, including wealth structuring, investment management, and estate planning.
+							</div>
+						</div>
+					</div>
+
 				</div>
 			</div>
 		</div>
@@ -338,8 +311,7 @@
 							<li><a class="googleplus hb-xs-margin" href="#"><span
 										class="hb hb-xs spin hb-google-plus"><i
 											class="fab fa-google-plus-g"></i></span></a></li>
-							<li><a class="dribbble hb-xs-margin" href="#"><span class="hb hb-xs spin hb-dribbble"><i
-											class="fab fa-dribbble"></i></span></a></li>
+
 						</ul>
 					</div>
 					<div class="col-lg-3 col-md-6 col-sm-6">
