--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 						<div class="contact-details">
 							<ul>
 								<li><i class="fas fa-phone fa-rotate-90"></i> +01 899 286 777</li>
-								<li><i class="fas fa-map-marker-alt"></i> 8/99 , North khailkoir, NY</li>
+								<li><i class="fas fa-map-marker-alt"></i> San Po Kong, Kowloon, HONG KONG, SAR</li>
 							</ul>
 						</div>
 					</div>
@@ -173,8 +173,8 @@
 					<div class="col-lg-4 mb-4 contact-right">
 						<h3>Contact Details</h3>
 						<p>
-							3481 Melrose Place
-							<br>Beverly Hills, CA 90210
+							Rm A07, 1701-02 New Trend Centre
+							<br>704 Prince Edward Road East
 							<br>
 						</p>
 						<p>
@@ -222,8 +222,7 @@
 							<li><a class="googleplus hb-xs-margin" href="#"><span
 										class="hb hb-xs spin hb-google-plus"><i
 											class="fab fa-google-plus-g"></i></span></a></li>
-							<li><a class="dribbble hb-xs-margin" href="#"><span class="hb hb-xs spin hb-dribbble"><i
-											class="fab fa-dribbble"></i></span></a></li>
+
 						</ul>
 					</div>
 					<div class="col-lg-3 col-md-6 col-sm-6">
