--- a/blog-post.html
+++ b/blog-post.html
@@ -37,7 +37,7 @@
 						<div class="contact-details">
 							<ul>
 								<li><i class="fas fa-phone fa-rotate-90"></i> +01 899 286 777</li>
-								<li><i class="fas fa-map-marker-alt"></i> 8/99 , North khailkoir, NY</li>
+								<li><i class="fas fa-map-marker-alt"></i> San Po Kong, Kowloon, HONG KONG, SAR</li>
 							</ul>
 						</div>
 					</div>
@@ -346,8 +346,7 @@
 							<li><a class="googleplus hb-xs-margin" href="#"><span
 										class="hb hb-xs spin hb-google-plus"><i
 											class="fab fa-google-plus-g"></i></span></a></li>
-							<li><a class="dribbble hb-xs-margin" href="#"><span class="hb hb-xs spin hb-dribbble"><i
-											class="fab fa-dribbble"></i></span></a></li>
+
 						</ul>
 					</div>
 					<div class="col-lg-3 col-md-6 col-sm-6">
