--- a/Banking&fx.html
+++ b/Banking&fx.html
@@ -146,24 +146,27 @@
                             and Electronic Money Institutions. Each partner offers comprehensive solutions tailored to
                             specific sectors and regions, ensuring our clients are connected with the most suitable firm
                             to address their requirements. </p>
-
-                        <p>Our reach extends across multiple continents, including Europe, Latin and South America, the
+                        <p class="lead">Our reach extends across multiple continents, including Europe, Latin and South
+                            America, the
                             Caribbean, Asia, the Middle East, and Africa.</p>
+
                         <blockquote class="blockquote">
                             <p class="mb-0">FinLogic offers expert guidance in Banking and Foreign Exchange to help
                                 businesses optimize their financial operations.</p>
-                            <footer class="blockquote-footer">Banking & Foreign Exchange (FX)
+                            <footer class="blockquote-footer">Banking &
                                 <cite title="Source Title">Foreign Exchange (FX)</cite>
                             </footer>
                         </blockquote>
 
-                        <p>FinLogic provides comprehensive solutions in Banking and Foreign Exchange, designed to help
+                        <p class="lead">FinLogic provides comprehensive solutions in Banking and Foreign Exchange,
+                            designed to help
                             businesses streamline their financial operations and navigate international markets with
                             confidence. Through our strategic partnerships with Tier 1 banks and financial institutions,
                             we offer tailored banking solutions, cutting-edge financial tools, and efficient payment
                             systems to meet the unique needs of your business.</p>
 
-                        <p>In the realm of Foreign Exchange, we simplify currency management by providing access to
+                        <p class="lead">In the realm of Foreign Exchange, we simplify currency management by providing
+                            access to
                             competitive exchange rates, trusted brokers, and risk mitigation strategies. Whether you're
                             managing cross-border transactions or seeking to optimize your FX operations, FinLogic
                             ensures that your business thrives in a dynamic financial landscape.</p>
