--- a/Cardissuanceprogrammes.html
+++ b/Cardissuanceprogrammes.html
@@ -196,7 +196,7 @@
                         <div class="card my-4">
                             <h5 class="card-header">Side Widget</h5>
                             <div class="card-body">
-                                FinLogic offers expert guidance in Banking and Foreign Exchange to help businesses
+                                FinLogic offers expert guidance in Card Issuance Programmes to help businesses
                                 optimize their financial operations.
                             </div>
                         </div>
@@ -209,7 +209,7 @@
                                     <div class="col-lg-6">
                                         <ul class="list-unstyled mb-0">
                                             <li>
-                                                <a href="#">Issuance Programmes</a>
+                                                <a href="#">Card Issuance Programmes</a>
                                             </li>
 
 
